# lidmeta

./: .editorconfig  .gitignore  Caddyfile  Dockerfile  LICENSE  Makefile  README.md  docker-compose.flat-file.yml  pyproject.toml  run_data-processor_clean.sh  run_data-processor_incremental.sh  run_search-service_test.sh  run_service-stack.sh
capture_proxy/: __init__.py  main.py
data_processor/: README.md  build_indexes.py  extract.py  main.py  normalizer.py  preprocess.py  test_preprocessing.py
schema_validator/: lidarr_api.yaml  run_tests.sh  test_schema.py  test_suite.py  validate.py
scripts/: switch_metadata_server.sh
search_service/: main.py  test_schema.py  test_sqlite_integration.py
tests/: test_build_index.py  test_cache.py  test_health.py  test_sqlite_cache.py
tools/: analyze_extracted_data.py  analyze_reverse_index_options.py  benchmark_search.py  build_index.py  build_release_indexes.py  compare_with_current_mapper.py  debug_radiohead_search.py  debug_release.py  detailed_field_analysis.py  download_mbjson_dump.py  extract_artists_remote.py  extract_multiple_artists.py  extract_radiohead_data.py  file_lookup_utils.py  filter_albums_only.py  filter_release_groups.py  find_artist_mbids.py  generate_flat_file_provider.py  get_artist_mbids.py  inspect_index.py  monitor_streaming.py  optimized_reverse_index.py  os_streaming_release_processor.py  streaming_normalization.py  streaming_release_processor.py  streaming_release_processor_v2.py  test_live_filter.py  test_release_file.py  test_release_index.py  test_reverse_index_integration.py  (+4 more)
(+15 files in other folders)
